force-app/main/default/objects/UnifiedLinkssotContactPointEmailTun1__dlm/UnifiedLinkssotContactPointEmailTun1__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Bridge</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
        <referenceEntityName>ContactPointEmailIdentityLink</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>