force-app/main/default/objects/UnifiedLinkssotContactPointEmailTun1__dlm/fields/rel_1712301885213_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1712301885213_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UnifiedLinkssotContactPointEmailTun1_rel</label>
    <referenceTo>UnifiedssotContactPointEmailTun1__dlm</referenceTo>
    <relationshipLabel>UnifiedLinkssotContactPointEmailTun1_rel</relationshipLabel>
    <relationshipName>rel_1712301885213_end</relationshipName>
    <type>Lookup</type>
</CustomField>